# pipapo

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.in  requirements.txt  setup.py  test.py
.github/workflows/: tests.yml
pipapo/: __init__.py  particles.py
pipapo/tests/: conftest.py  dataclass.py  particle.py  particles.py  testing_utils.py
pipapo/utils/: bining.py  binning.py  contacts.py  csv.py  dataclass.py  interfaces.py  io.py  sphere_intersection.py  sphere_plane_intersection.py  voxelize.py  voxels.py  vtk.py
src/pipapo/: __init__.py  particle.py
src/pipapo/utils/: contacts.py  exceptions.py
tests/: conftest.py  dataclass.py  particles.py  test_particle.py  test_voxels.py  testing_utils.py  voxels.py
