[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pipapo"
authors = [{ name = "the patricles" }]
license = { text = "MIT" }
description = "pipapo - python implemented particles postprocessor"
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "pipapo.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
develop = [
    "pylint>=2.15.9",
    "isort>=5.0",
    "black==22.3.0",
    "vulture>=2.3",
    "pip-tools",
]
